# cppHW01

./: .gitignore  Algorithm.cpp  Algorithm.h  Algorithm_208992883_322623182_BFS.cpp  Algorithm_208992883_322623182_BFS.h  BFSAlgorithm.cpp  BFSAlgorithm.h  CMakeLists.txt  FileManagement.cpp  FileManagement.h  House.cpp  House.h  Main.cpp  Makefile  MyAlgorithm.cpp  MyAlgorithm.h  MySimulator.cpp  MySimulator.h  README.md  RandomizedStepAlgorithm.cpp  RandomizedStepAlgorithm.h  SensorSystem.cpp  SensorSystem.h  SensorSytem.h  SimulationController.cpp  SimulationController.h  SimultionController.cpp  VacuumCleaner.cpp  VacuumCleaner.h  bonus.txt  compiling.bash  house1.house  house2.house  house3.house  input.txt  input3.txt  libAlgorithm_208992883_322623182_BFS.error  my_battery_meter.cpp  my_battery_meter.h  my_dirt_sensor.cpp  (+10 more)
Algorithm_208992883_322623182_BFS/: Algorithm_208992883_322623182_BFS.cpp  Algorithm_208992883_322623182_BFS.h  CMakeLists.txt
Algorithm_208992883_322623182_randomized_DFS/: Algorithm_208992883_322623182_randomized_DFS.cpp  Algorithm_208992883_322623182_randomized_DFS.h  CMakeLists.txt
algorithm/: AlgorithmRegistration.h  MyAlgorithm.cpp  MyAlgorithm.h
common/: AbstractAlgorithm.h  AlgorithmRegistrar.cpp  AlgorithmRegistrar.h
custom_algorithm/: MyAlgorithm.cpp  MyAlgorithm.h
simulator/: AlgorithmRegistrar.cpp  CMakeLists.txt  House.cpp  House.h  Main.cpp  MySimulator.cpp  MySimulator.h  my_battery_meter.cpp  my_battery_meter.h  my_dirt_sensor.cpp  my_dirt_sensor.h  my_wall_sensor.cpp  my_wall_sensor.h
tests/: .Test_14_complex_pathways.txt.swp  .output.txt.swp  RobotTest.cpp  Test_10_large_open_area.txt  Test_11_obstacle_course.txt  Test_12_sparse_dirt.txt  Test_13_multiple_docking_stations.txt  Test_14_Invalid_Format.txt  Test_15_No_Docking.txt  Test_16_No_Max_Battery.txt  Test_17_Negative_Max_Battery.txt  Test_1_Basic_Functionality_Test.output  Test_1_Basic_Functionality_Test.txt  Test_2_House_Not_Surrounded_by_Walls.output  Test_2_House_Not_Surrounded_by_Walls.txt  Test_3_Insufficient_Battery.output  Test_3_Insufficient_Battery.txt  Test_4_Maximum_Steps_Exceeded.output  Test_4_Maximum_Steps_Exceeded.txt  Test_5_docking_station_surrounded_by_dirt.txt  Test_6_irregular_shape.txt  Test_7_completely_clean_house.txt  Test_8_maximum_dirt_levels.txt  Test_9_narrow_corridors.txt  error.txt  output.txt  test.sh
tests/output/: Test_10_large_open_area.output  Test_12_sparse_dirt.output  Test_15_No_Docking.output  Test_1_Basic_Functionality_Test.output  Test_2_House_Not_Surrounded_by_Walls.output  Test_3_Insufficient_Battery.output  Test_4_Maximum_Steps_Exceeded.output  Test_5_docking_station_surrounded_by_dirt.output  Test_6_irregular_shape.output  Test_7_completely_clean_house.output  Test_8_maximum_dirt_levels.output  Test_9_narrow_corridors.output
